Implemented basic simulator screen /w support for running multiple sims

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,6 +152,8 @@ add_executable(osc
     src/screens/model_editor_screen.cpp
     src/screens/splash_screen.hpp
     src/screens/splash_screen.cpp
+    src/screens/simulator_screen.hpp
+    src/screens/simulator_screen.cpp
 
     src/utils/concurrency.hpp
     src/utils/shims.hpp
