--- a/build_resources/INSTALL_osc.toml
+++ b/build_resources/INSTALL_osc.toml
@@ -5,4 +5,4 @@ resources = "resources"
 # enable dragging panels out of the host window and into their own window
 #
 # warning: results vary *greatly* accross platforms
-multiple_viewports = false
+# multiple_viewports = false
