--- a/src/osc_build_config.hpp.in
+++ b/src/osc_build_config.hpp.in
@@ -4,3 +4,13 @@
 #define OSC_VERSION_STRING "@osc_VERSION_MAJOR@.@osc_VERSION_MINOR@.@osc_VERSION_PATCH@"
 #define OSC_GLSL_VERSION "#version 330 core"
 #define OSC_BUILD_ID "@OSC_BUILD_ID@"
+
+// bool
+//
+// enables multi viewport by default when not specified by user/config
+#define OSC_DEFAULT_USE_MULTI_VIEWPORT @OSC_DEFAULT_USE_MULTI_VIEWPORT_CBOOL@
+
+// string
+//
+// default location of resources dir when not specified by user/config
+#define OSC_DEFAULT_RESOURCE_DIR "@OSC_DEFAULT_RESOURCE_DIR@"
