Cleaned up config API ready for keybinds refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,6 +186,8 @@ add_executable(osc
     src/log.cpp
     src/assertions.hpp
     src/assertions.cpp
+    src/resources.hpp
+    src/resources.cpp
     src/osc.cpp
 
     # Windows: also link a resources file (rc)
