--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,7 @@ add_executable(osc
 
     src/3d/gl.hpp
     src/3d/gl.cpp
-    src/3d/gl_extensions.hpp
+    src/3d/gl_glm.hpp
     src/3d/texturing.hpp
     src/3d/texturing.cpp
     src/3d/cameras.hpp
