Stubbed out basic screen implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,6 +161,8 @@ add_executable(osc
     src/screens/splash_screen.cpp
     src/screens/simulator_screen.hpp
     src/screens/simulator_screen.cpp
+    src/screens/meshes_to_model_wizard_screen.hpp
+    src/screens/meshes_to_model_wizard_screen.cpp
 
     src/utils/concurrency.hpp
     src/utils/shims.hpp
