Made wizard step1 use a work queue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,6 +166,7 @@ add_executable(osc
     src/screens/meshes_to_model_wizard_screen_step2.hpp
     src/screens/meshes_to_model_wizard_screen_step2.cpp
 
+    src/utils/algs.hpp
     src/utils/concurrency.hpp
     src/utils/shims.hpp
     src/utils/sdl_wrapper.hpp
