Updated base Imgui config to try and make the initial panel layout saner

--- a/resources/imgui_base_config.ini
+++ b/resources/imgui_base_config.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
-Pos=0,0
-Size=1920,1136
+Pos=0,19
+Size=1920,1181
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Splash screen]
-Pos=610,218
-Size=700,700
+Pos=610,318
+Size=700,500
 Collapsed=0
 
 [Window][Loading message]
@@ -22,61 +22,61 @@ Collapsed=0
 Pos=364,0
 Size=1157,983
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000004,0
 
 [Window][Hierarchy]
-Pos=0,0
-Size=362,1136
+Pos=0,19
+Size=376,633
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][Muscles]
 Pos=1523,19
 Size=397,558
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000B,0
 
 [Window][Outputs]
-Pos=1523,19
-Size=397,558
+Pos=1548,19
+Size=372,633
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x00000011,0
 
 [Window][Utils]
 Pos=1523,19
 Size=397,558
 Collapsed=0
-DockId=0x00000003,2
+DockId=0x0000000B,2
 
 [Window][Moment Arms]
 Pos=1523,19
 Size=397,558
 Collapsed=0
-DockId=0x00000003,3
+DockId=0x0000000B,3
 
 [Window][Selection]
-Pos=1523,570
-Size=397,566
+Pos=0,654
+Size=376,546
 Collapsed=0
-DockId=0x00000006,2
+DockId=0x0000000B,0
 
 [Window][Coordinates]
 Pos=1523,19
 Size=397,558
 Collapsed=0
-DockId=0x00000003,4
+DockId=0x0000000B,4
 
 [Window][Simulate]
 Pos=1523,19
 Size=397,558
 Collapsed=0
-DockId=0x00000003,5
+DockId=0x0000000B,5
 
 [Window][UI]
 Pos=0,19
 Size=397,1117
 Collapsed=0
-DockId=0x00000003,5
+DockId=0x0000000B,5
 
 [Window][Error loading]
 Pos=60,60
@@ -87,25 +87,25 @@ Collapsed=0
 Pos=364,19
 Size=1157,1117
 Collapsed=0
-DockId=0x00000009,1
+DockId=0x00000004,1
 
 [Window][Edit Props]
-Pos=1523,0
-Size=397,568
+Pos=0,654
+Size=376,546
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000B,1
 
 [Window][Snapshots]
 Pos=1523,0
 Size=397,568
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x0000000B,1
 
 [Window][Actions]
-Pos=364,985
-Size=1157,151
+Pos=378,937
+Size=1542,32
 Collapsed=0
-DockId=0x0000000A,1
+DockId=0x00000008,0
 
 [Window][fatal exception]
 Pos=79,62
@@ -120,13 +120,13 @@ Collapsed=0
 [Window][##render]
 Size=1920,1136
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000B,0
 
 [Window][render1]
 Pos=364,19
 Size=1157,1117
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000004,0
 
 [Window][editor]
 Pos=60,60
@@ -209,18 +209,99 @@ Size=272,354
 Collapsed=0
 
 [Window][add body]
-Pos=704,323
-Size=512,513
+Pos=704,381
+Size=512,375
 Collapsed=0
 
+[Window][viewer0]
+Pos=378,19
+Size=1542,916
+Collapsed=0
+DockId=0x00000004
+
+[Window][Log]
+Pos=378,971
+Size=1542,229
+Collapsed=0
+DockId=0x0000000A,1
+
+[Window][Add Force]
+Pos=704,206
+Size=512,787
+Collapsed=0
+
+[Window][viewer1]
+Pos=931,19
+Size=615,459
+Collapsed=0
+DockId=0x00000006
+
+[Window][viewer2]
+Pos=931,480
+Size=615,489
+Collapsed=0
+DockId=0x0000000D
+
+[Window][viewer3]
+Pos=1538,464
+Size=382,471
+Collapsed=0
+DockId=0x0000000F
+
+[Window][Simulations]
+Pos=1548,654
+Size=372,546
+Collapsed=0
+DockId=0x00000012
+
+[Window][Simulation Details]
+Pos=1548,19
+Size=372,633
+Collapsed=0
+DockId=0x00000011,1
+
+[Window][Loading Message]
+Pos=704,344
+Size=512,52
+Collapsed=0
+
+[Window][select experiment]
+Pos=610,350
+Size=700,500
+Collapsed=0
+
+[Window][wizardsstep2viewer]
+Pos=368,0
+Size=1552,1200
+Collapsed=0
+DockId=0x00000004
+
+[Window][wizardstep2sidebar]
+Pos=0,0
+Size=366,1200
+Collapsed=0
+DockId=0x00000013
+
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1136 Split=X Selected=0x945C996A
-  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=362,1117 HiddenTabBar=1 Selected=0x788BAA0D
-  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=1556,1117 Split=X
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=1157,1136 Split=Y
-      DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=1066,983 CentralNode=1 HiddenTabBar=1 Selected=0x945C996A
-      DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=1066,151 HiddenTabBar=1 Selected=0xCAF5C873
-    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=397,1136 Split=Y Selected=0x16244C15
-      DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=397,568 Selected=0xCF60C49E
-      DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=397,566 HiddenTabBar=1 Selected=0x14548E74
+DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1181 Split=X Selected=0x945C996A
+  DockNode                ID=0x00000013 Parent=0x8B93E3BD SizeRef=366,1200 HiddenTabBar=1 Selected=0x4E70EF18
+  DockNode                ID=0x00000014 Parent=0x8B93E3BD SizeRef=1552,1200 Split=X
+    DockNode              ID=0x0000000E Parent=0x00000014 SizeRef=1546,1181 Split=X
+      DockNode            ID=0x00000001 Parent=0x0000000E SizeRef=303,1117 Split=Y Selected=0x788BAA0D
+        DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=362,599 HiddenTabBar=1 Selected=0x788BAA0D
+        DockNode          ID=0x0000000B Parent=0x00000001 SizeRef=362,517 Selected=0x16244C15
+      DockNode            ID=0x00000002 Parent=0x0000000E SizeRef=1241,1117 Split=Y
+        DockNode          ID=0x00000009 Parent=0x00000002 SizeRef=1066,950 Split=Y Selected=0x945C996A
+          DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=1157,916 Split=X Selected=0xEFD926F6
+            DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=624,916 CentralNode=1 HiddenTabBar=1 Selected=0xEFD926F6
+            DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=615,916 Split=Y Selected=0x98DE1660
+              DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=768,443 HiddenTabBar=1 Selected=0x98DE1660
+              DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=768,471 Split=X Selected=0x01D747DA
+                DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=384,471 HiddenTabBar=1 Selected=0x01D747DA
+                DockNode  ID=0x0000000F Parent=0x0000000C SizeRef=382,471 HiddenTabBar=1 Selected=0x76D0774C
+          DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=1157,32 HiddenTabBar=1 Selected=0xCAF5C873
+        DockNode          ID=0x0000000A Parent=0x00000002 SizeRef=1066,229 HiddenTabBar=1 Selected=0xB7722E25
+    DockNode              ID=0x00000010 Parent=0x00000014 SizeRef=372,1181 Split=Y Selected=0x1A64C361
+      DockNode            ID=0x00000011 Parent=0x00000010 SizeRef=372,633 Selected=0x1A64C361
+      DockNode            ID=0x00000012 Parent=0x00000010 SizeRef=372,546 HiddenTabBar=1 Selected=0x5A8E322E
 
