--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,8 +156,8 @@ add_executable(osc
     src/screens/loading_screen.hpp
     src/screens/model_editor_screen.cpp
     src/screens/model_editor_screen.hpp
-    #src/screens/simulator_screen.cpp
-    #src/screens/simulator_screen.hpp
+    src/screens/simulator_screen.cpp
+    src/screens/simulator_screen.hpp
     src/screens/splash_screen.cpp
     src/screens/splash_screen.hpp
 
